<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_detail_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.movierank.arjen.movierank.fragments.MovieDetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/imgDetailPoster"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:layout_marginLeft="@dimen/horizontalGapNormal"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/txtDetailTitle"
                        style="@style/movieDetailHeader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:id="@+id/txtSubDetail"
                        style="@style/contentField"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                style="@style/fieldLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_released" />

            <TextView
                android:id="@+id/txtDetailReleased"
                style="@style/contentField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/fieldLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_runtime" />

            <TextView
                android:id="@+id/txtDetailRuntime"
                style="@style/contentField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/fieldLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_genre" />

            <TextView
                android:id="@+id/txtDetailGenre"
                style="@style/contentField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/fieldLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_director" />

            <TextView
                android:id="@+id/txtDetailDirector"
                style="@style/contentField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/fieldLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_writer" />

            <TextView
                android:id="@+id/txtDetailWriter"
                style="@style/contentField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/fieldLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_actors" />

            <TextView
                android:id="@+id/txtDetailActors"
                style="@style/contentField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                style="@style/fieldLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_plot" />

            <TextView
                android:id="@+id/txtDetailPlot"
                style="@style/contentField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                style="@style/fieldLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_language" />

            <TextView
                android:id="@+id/txtDetailLanguage"
                style="@style/contentField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/fieldLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_country" />

            <TextView
                android:id="@+id/txtDetailCountry"
                style="@style/contentField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/fieldLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_awards" />

            <TextView
                android:id="@+id/txtDetailAwards"
                style="@style/contentField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>
    </ScrollView>
</FrameLayout>
